--- a/wp-content/themes/divi-mft/sass/layouts/_home.scss
+++ b/wp-content/themes/divi-mft/sass/layouts/_home.scss
@@ -18,10 +18,12 @@
   border-top: 2px solid $color-yellow;
 }
 
-.overlap-negative.overlap-negative {
-  & > div.et_pb_column {
-    margin-top: -50px;
-    padding: 0 20px;
+@media (min-width: 981px) {
+  .overlap-negative.overlap-negative {
+    & > div.et_pb_column {
+      margin-top: -50px;
+      padding: 0 20px;
+    }
   }
 }
 
